// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration should register delegate 1`] = `<DocumentFragment />`;

exports[`Registration should register second signature 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 hLgyWD flex w-12"
        >
          <div
            class="sc-bdfBwQ dlKckO mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ fzSuZU p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ fdJUih p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 Qqquu flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Registration__form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div />
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="AuthenticationStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Authenticate
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Enter your mnemonic passphrase to authenticate the transaction.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                      </label>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="AuthenticationStep__mnemonic"
                            name="mnemonic"
                            type="password"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                        >
                          <div
                            class=""
                          >
                            <button
                              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none group"
                              data-testid="InputPassword__toggle"
                              type="button"
                            >
                              <div
                                class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                              />
                              <div
                                class="sc-bdfBwQ dnaihB"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  eye.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                    data-testid="Registration__back-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 eXxJsW space-x-2"
                    data-testid="Registration__send-button"
                    type="submit"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <span>
                        Send
                      </span>
                      <div
                        class="sc-bdfBwQ bcEVDZ"
                        height="16"
                        width="16"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Registration should show error step and go back 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 hLgyWD flex w-12"
        >
          <div
            class="sc-bdfBwQ dlKckO mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ fzSuZU p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ fdJUih p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 Qqquu flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Registration__form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="ErrorStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Transaction Error
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction-error-banner.svg
                    </svg>
                    <div
                      class="space-y-6"
                    >
                      <p
                        class="text-theme-secondary-text"
                      >
                        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                      </p>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 glWYnv py-4"
                        disabled=""
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <textarea
                            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full resize-none text-theme-secondary-text"
                            data-testid="ErrorStep__errorMessage"
                            disabled=""
                            style="height: 4px;"
                          >
                            {"message":"","type":"Error"}
                          </textarea>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex"
                    >
                      <div
                        class="relative"
                      >
                        <button
                          class="ClipboardButton__StyledButton-sc-1ft1991-0 jNaOXY"
                          data-testid="clipboard-button__wrapper"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="sc-bdfBwQ dnaihB"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                            <span>
                              Copy
                            </span>
                          </div>
                        </button>
                      </div>
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST ml-auto mr-3"
                        data-testid="ErrorStep__wallet-button"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          Back to Wallet
                        </div>
                      </button>
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 eXxJsW"
                        data-testid="ErrorStep__repeat-button"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          Retry
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div />
                <div
                  class="flex justify-end mt-10 space-x-3"
                />
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
